--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     restart: always
     ports:
       - "6379:6379"
+    command: ["redis-server", "--save", "", "--appendonly", "no"]
 
   web:
     restart: always
